--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "inngest": "npx inngest-cli@latest dev -u http://localhost:3000/api/inngest",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,8 +15,8 @@
     "@arcjet/next": "^1.0.0-alpha.34",
     "@clerk/nextjs": "^6.6.0",
     "@google/generative-ai": "^0.21.0",
-    "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^6.0.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.19.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -25,7 +26,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-email/components": "0.0.30",
+    "@react-email/components": "^0.0.30",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -33,24 +34,25 @@
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
-    "react": "^19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0-rc-66855b96-20241106",
-    "react-hook-form": "^7.53.2",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.68.0",
     "react-spinners": "^0.14.1",
     "recharts": "^2.14.1",
-    "resend": "^4.0.1",
+    "resend": "^4.8.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "inngest-cli": "^1.16.1",
     "postcss": "^8",
-    "prisma": "^6.0.1",
+    "prisma": "^6.19.1",
     "react-email": "3.0.3",
     "tailwindcss": "^3.4.1"
   }
